--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,53 +1,41 @@
-steps:
-  # Install dependencies
-  - name: 'node:20-alpine'
-    entrypoint: npm
-    args: ['ci']
+  steps:
+  Build Docker image
+     - name: 'gcr.io/cloud-builders/docker'
+      args: [
+        'build',
+        '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA',
+        '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:latest',
+        '.'
+      ]
 
-  # Build TypeScript application
-  - name: 'node:20-alpine'
-    entrypoint: npm
-    args: ['run', 'build']
-    env:
-      - 'NODE_ENV=production'
+  Push to Artifact Registry
+     - name: 'gcr.io/cloud-builders/docker'
+      args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA']
 
-  # Build Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build',
-      '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA',
-      '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:latest',
-      '.'
-    ]
+  Deploy to Cloud Run
+     - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+      entrypoint: gcloud
+      args:
+         - 'run'
+         - 'deploy'
+         - 'trackmyrc'
+         - '--image'
+         - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
+         - '--region'
+         - 'us-central1'
+         - '--platform'
+         - 'managed'
+         - '--allow-unauthenticated'
+         - '--port'
+         - '5000'
+         - '--set-env-vars'
+         - 'NODE_ENV=production'
 
-  # Push to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA']
+  images:
+     - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
 
-  # Deploy to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - 'run'
-      - 'deploy'
-      - 'trackmyrc'
-      - '--image'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
-      - '--region'
-      - 'us-central1'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
-      - '--port'
-      - '5000'
-      - '--set-env-vars'
-      - 'NODE_ENV=production'
+  options:
+    logging: CLOUD_LOGGING_ONLY
+    machineType: 'E2_HIGHCPU_8'
 
-images:
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
-
-options:
-  logging: CLOUD_LOGGING_ONLY
-  machineType: 'E2_HIGHCPU_8'
-
-timeout: '1200s'
+  timeout: '1200s'
