--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,41 +1,41 @@
-  steps:
-  Build Docker image
+     steps:
      - name: 'gcr.io/cloud-builders/docker'
-      args: [
-        'build',
-        '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA',
-        '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:latest',
-        '.'
-      ]
-
-  Push to Artifact Registry
-     - name: 'gcr.io/cloud-builders/docker'
-      args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA']
-
-  Deploy to Cloud Run
-     - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-      entrypoint: gcloud
+       args:
+       - 'build'
+       - '-t'
+       - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
+       - '-t'
+       - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:latest'
+       - '.'
+    
+    - name: 'gcr.io/cloud-builders/docker'
       args:
-         - 'run'
-         - 'deploy'
-         - 'trackmyrc'
-         - '--image'
-         - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
-         - '--region'
-         - 'us-central1'
-         - '--platform'
-         - 'managed'
-         - '--allow-unauthenticated'
-         - '--port'
-         - '5000'
-         - '--set-env-vars'
-         - 'NODE_ENV=production'
-
-  images:
-     - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
-
-  options:
-    logging: CLOUD_LOGGING_ONLY
-    machineType: 'E2_HIGHCPU_8'
-
-  timeout: '1200s'
+      - 'push'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
+    
+    - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+      entrypoint: 'gcloud'
+      args:
+      - 'run'
+      - 'deploy'
+      - 'trackmyrc'
+      - '--image'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
+      - '--region'
+      - 'us-central1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
+      - '--port'
+      - '5000'
+      - '--set-env-vars'
+      - 'NODE_ENV=production'
+    
+    images:
+    - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
+    
+    options:
+      logging: CLOUD_LOGGING_ONLY
+      machineType: 'E2_HIGHCPU_8'
+    
+    timeout: '1200s'
