--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-# Grant the Cloud Run service account access to all secrets
+# Grant the Cloud Run service account access to the secrets
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'gcloud'
   args:
@@ -7,10 +7,9 @@ steps:
     - 'add-iam-policy-binding'
     - 'db-connection-string'
     - '--member'
-    - 'serviceAccount:trackmyrc@appspot.gserviceaccount.com'
+    - 'serviceAccount:254227348007-compute@developer.gserviceaccount.com'
     - '--role'
     - 'roles/secretmanager.secretAccessor'
-
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'gcloud'
   args:
@@ -18,10 +17,9 @@ steps:
     - 'add-iam-policy-binding'
     - 'google-client-id'
     - '--member'
-    - 'serviceAccount:trackmyrc@appspot.gserviceaccount.com'
+    - 'serviceAccount:254227348007-compute@developer.gserviceaccount.com'
     - '--role'
     - 'roles/secretmanager.secretAccessor'
-
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'gcloud'
   args:
@@ -29,10 +27,9 @@ steps:
     - 'add-iam-policy-binding'
     - 'google-client-secret'
     - '--member'
-    - 'serviceAccount:trackmyrc@appspot.gserviceaccount.com'
+    - 'serviceAccount:254227348007-compute@developer.gserviceaccount.com'
     - '--role'
     - 'roles/secretmanager.secretAccessor'
-
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'gcloud'
   args:
@@ -40,7 +37,7 @@ steps:
     - 'add-iam-policy-binding'
     - 'gcs-service-account'
     - '--member'
-    - 'serviceAccount:trackmyrc@appspot.gserviceaccount.com'
+    - 'serviceAccount:254227348007-compute@developer.gserviceaccount.com'
     - '--role'
     - 'roles/secretmanager.secretAccessor'
 
@@ -74,8 +71,12 @@ steps:
     - '--platform'
     - 'managed'
     - '--allow-unauthenticated'
-    - '--set-secrets'
-    - 'DATABASE_URL=db-connection-string:latest,GOOGLE_CLIENT_ID=google-client-id:latest,GOOGLE_CLIENT_SECRET=google-client-secret:latest,GOOGLE_CLOUD_SERVICE_ACCOUNT_JSON=gcs-service-account:latest'
+    - '--port'
+    - '5000'
+    - '--set-secrets=DATABASE_URL=db-connection-string:latest'
+    - '--set-secrets=GOOGLE_CLIENT_ID=google-client-id:latest'
+    - '--set-secrets=GOOGLE_CLIENT_SECRET=google-client-secret:latest'
+    - '--set-secrets=GOOGLE_CLOUD_SERVICE_ACCOUNT_JSON=gcs-service-account:latest'
 
 images:
 - 'us-central1-docker.pkg.dev/$PROJECT_ID/trackmyrc/app:$COMMIT_SHA'
