--- a/package.json
+++ b/package.json
@@ -94,11 +94,12 @@
     "ws": "^8.18.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0",
-    "@vitejs/plugin-react": "^5.0.2"
+    "@vitejs/plugin-react": "^5.0.2",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.3"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.2.7",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
+    
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.13",
     "@types/connect-pg-simple": "^7.0.3",
